@@ -34,5 +34,8 @@ autoreconnect yes
 # block spy packets sent by the client?
 antispy yes
 
+# block light packets sent by the server?
+light no
+
 # fake a client version?
 #client_version "9.8.7z"
